%%{init: {
  "theme": "default",
  "themeVariables": {
    "fontSize": "18px"
  }
}}%%
classDiagram
direction LR

class EvaluationPolicy {
  +evalWeights?: Record<string, number>
  +requiredEvals?: string[]
}

class OptimizationJobConfig {
  +maxCycles: number
  +acceptanceThreshold?: number
  +evaluationPolicy?: EvaluationPolicy
}

class OptimizationJob {
  +optimizationJobId: string
  +createdAt: string
}

class CreateTrajectorySetInput {
  +optimizationJobId: string
  +trajectories: readonly Trajectory[]
}

class TrajectorySet {
  +trajectoryIds: string[]
  +createdAt: string
}

class CreateCandidateVersionInput {
  +cycleOutput: CycleOutput
  +analysis: FailureAnalysis
}

class CandidateVersion {
  +candidateId: string
  +createdAt: string
}

class ScopeIssue {
  +eval: string
  +reason: string
  +passRate?: number
}

class ScopeOverview {
  +summary: string
  +issues: ScopeIssue[]
  +failingEvals: string[]
  +passingEvals: string[]
}

class EvalSummaries {
  +singleTurn: Record<EvalName, EvalSummary>
  +multiTurn: Record<EvalName, EvalSummary>
  +singleTurnOverview: ScopeOverview
  +multiTurnOverview: ScopeOverview
}

class CreateCandidateRunInput {
  +optimizationJobId: string
  +candidate: CandidateVersion
}

class CandidateRun {
  +optimizationJobId: string
  +candidateId: string
  +trajectories: readonly Trajectory[]
  +startedAt: string
  +completedAt?: string
}

class EvaluateCandidateRunInput {
  +run: CandidateRun
}

class CandidateRunEvaluation {
  +optimizationJobId: string
  +candidateId: string
  +evalSummaries: EvalSummaries
  +aggregatedPassRate: number
}

class CreateCycleOutputInput {
  +optimizationJobId: string
  +candidate: CandidateVersion
  +evaluation: CandidateRunEvaluation
}

class TallyArtifactRef {
  +trajectoryId: string
  +runId: string
  +artifactPath: string
}

class CycleOutput {
  +cycleOutputId: string
  +optimizationJobId: string
  +candidateId: string
  +tallyArtifacts: TallyArtifactRef[]
  +evalSummaries: EvalSummaries
  +aggregatedPassRate: number
  +createdAt: string
}

class AnalyzeCycleOutputFailuresInput {
  +cycleOutput: CycleOutput
}

class FailureItem {
  +trajectoryId: string
  +eval: string
  +level: step | conversation | summary
  +reason?: string
}

class FailureAnalysis {
  +failures: FailureItem[]
  +targetBlocks: string[]
}

class FinalCandidateSelectionOptions {
  +evaluationPolicyOverride?: EvaluationPolicy
}

class StopConditionInput {
  +cycle: number
  +cycleOutput: CycleOutput
  +maxCycles: number
  +acceptanceThreshold?: number
}

class StopDecision {
  +stop: boolean
  +reason: thresholdReached | maxCycles
}

class SelectFinalCandidateInput {
  +optimizationJobId: string
  +cycleOutputs: CycleOutput[]
  +options?: FinalCandidateSelectionOptions
}

class FinalCandidateChecks {
  +sameOptimizationJob: boolean
  +requiredEvalsPresent: boolean
  +priorityWeightedEvalsNonRegressed: boolean
}

class FinalCandidateDecision {
  +acceptedCandidateId: string
  +selectedCycleOutputId: string
  +reason: string
  +checks: FinalCandidateChecks
}

OptimizationJob --> OptimizationJobConfig : 1 config
OptimizationJobConfig --> EvaluationPolicy : 1a policy
CreateTrajectorySetInput --> OptimizationJob : 2 optimization job
CreateCandidateVersionInput --> CycleOutput : 3a cycle output
CreateCandidateVersionInput --> FailureAnalysis : 3b analysis
CreateCandidateRunInput --> OptimizationJob : 4a optimization job
CreateCandidateRunInput --> CandidateVersion : 4b candidate
EvaluateCandidateRunInput --> CandidateRun : 5 run
CandidateRunEvaluation --> EvalSummaries : 5 summaries
EvalSummaries --> ScopeOverview : 5a overview
ScopeOverview --> ScopeIssue : 5b issues
CreateCycleOutputInput --> OptimizationJob : 6a optimization job
CreateCycleOutputInput --> CandidateVersion : 6b candidate
CreateCycleOutputInput --> CandidateRunEvaluation : 6c evaluation
CycleOutput --> TallyArtifactRef : 6d artifacts
CycleOutput --> EvalSummaries : 6e summaries
AnalyzeCycleOutputFailuresInput --> CycleOutput : 7 cycle output
FailureAnalysis --> FailureItem : 7a failures
StopConditionInput --> CycleOutput : 8 cycle output
SelectFinalCandidateInput --> OptimizationJob : 9 optimization job
SelectFinalCandidateInput --> CycleOutput : 9a cycle outputs
SelectFinalCandidateInput --> FinalCandidateSelectionOptions : 9b options
FinalCandidateDecision --> FinalCandidateChecks : 9c checks